# pixeldriller

./: .flake8  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg
.githib/workflows/: python-app.yml
.github/workflows/: python-app.yml
benchmark/: points.geojson
doc/: requirements.txt
doc/source/: api.rst  conf.py  developer_guide.rst  index.rst  pixdrill_drill.rst  pixdrill_drillpoints.rst  pixdrill_drillstats.rst  pixdrill_image_reader.rst  pixelstac_asset_reader.rst  pixelstac_pixelstac.rst  pixelstac_pointstats.rst  structure.dot  tutorial.rst
pixdrill/: drill.py  drillpoints.py  drillstats.py  example.py  image_reader.py  pixelstac.py  pointstats.py
pixelstac/: asset_reader.py  pixelstac.py  pixstac.py  point.py  pointstats.py
profiles/: README.md  benchmark.py
tests/: fixtures.py  test_asset_reader.py  test_drill.py  test_drillpoints.py  test_drillstats.py  test_image_reader.py  test_pixelstac.py  test_point.py  test_pointstats.py
